# repodossier

./: .gitignore  .repocontext.example.yml  .repodossier.example.yml  CONTRIBUTING.md  LICENSE  MILESTONE18.md  README.md  RELEASE_1.0.0.md  REPOCONTEXT_ARCHITECTURE.md  REPOCONTEXT_ROADMAP.md  REPOCONTEXT_SPEC_v1.3.txt  Recommended commit message  SECURITY.md  architecture.md  pyproject.toml  runtests
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: archive-workflow.md  dev-aliases.md  installation.md  private-data-cleanup.md  public-cleanup-boundaries.md  runtests.md
planning/: .milestones_migration.md.swp  MILESTONE11.md  MILESTONE12.md  MILESTONE15.md  MILESTONE2.md  MILESTONE4.md  MILESTONE5.md  MILESTONE6.md  MILESTONE7.md  MILESTONE8.md  MILESTONE9.md  README.md  REPOCONTEXT_ROADMAP.md  milestone13.md  milestone16.md  milestone17.md  milestone18.md  milestones_migration.md  roadmap_after_next.md  roadmap_migration.md  roadmap_next.md  spec.md
planning/1.1.0/: milestone1.md  milestone2.md  milestone3.md  milestone4.md
planning/archive/: README.md
planning/patchharbor/: c-alias-contract.md  c-alias-switch-criteria.md  dev-scripts-inventory.md  download-runner-adoption-acceptance.md  download-runner-file-inventory.md  download-runner-inventory-acceptance.md  download-runner-lifecycle-flow.md  download-runner-output-contract.md  download-runner-parity-acceptance.md  export-runner-behavior-inventory.md  export-runner-file-inventory.md  helper-classification.md  helper-file-inventory.md  replaced-source-logic-map.md  repodossier-developer-workflow.md  repodossier-migration-notes.md  repodossier-script-cleanup-inventory.md  source-download-runner-wrapper-draft.md  source-export-wrapper-draft.md  source-runner-adoption-acceptance.md
repocontext/: __init__.py  cli.py  git.py
scripts/: validate_pipx_release.sh
scripts/dev/: audit_public_repo.py  check_dev_environment.py  install_aliases.sh  lint_patch_script.py  patch-rules.md  patch-workflow-rules.json  patch-workflow-rules.schema.json  r.sh  repo_patch_helper.py  run_latest_download_patch.sh  run_latest_download_patch_patchharbor_candidate.sh  run_patchharbor_patch.sh  run_repodossier_exports.sh  runtests.sh  show_progress_context.py  validate_patch_metadata.py  validate_patch_workflow_rules.py
src/repocontext/: __init__.py  __main__.py  _version.py  bash_call_graph.py  bash_symbols.py  call_graph.py  changed.py  changed_command.py  changed_exporter.py  cli.py  cli_split.py  config.py  dependencies.py  git.py  gitignore.py  import_graph.py  models.py  output_writer.py  ranking.py  scanner.py  schema.py  secrets.py  (+2 more)
tests/: test_ai_exporter.py  test_ai_exporter_dependencies.py  test_ai_split_export.py  test_archive_cli_contract.py  test_archive_install_smoke.py  test_archive_snapshot_zip.py  test_archive_source_references.py  test_archive_source_resolution.py  test_archive_workflow_docs.py  test_archive_workflow_e2e.py  test_audit_public_repo.py  test_bash_call_graph.py  test_bash_call_graph_export.py  test_bash_source_detection.py  test_bash_symbol_index.py  test_bash_symbols.py  test_c_alias_switch_plan.py  test_c_runner_progress_context_metadata_hint.py  test_c_runner_progress_context_switch.py  test_c_runner_zip_and_terminal_status.py  test_call_graph.py  test_call_graph_milestone7_acceptance.py  test_changed_cli.py  test_changed_cli_acceptance.py  test_changed_collection.py  test_changed_exporter.py  test_changed_exporter_secret_masking.py  test_changed_git.py  test_changed_split_export.py  test_check_dev_environment.py  test_cli.py  test_cli_docs_export.py  test_cli_split_options.py  test_config.py  test_config_ai_export_filters.py  test_config_ai_export_limits.py  test_config_ai_export_summary.py  test_config_changed_export_filters.py  test_config_changed_export_limits.py  test_config_cli_help.py  (+163 more)
(+75 files in other folders)
