[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "PyYAML>=6.0",
]
name = "repocontext"
version = "1.0.0"
description = "AI-friendly exports of Git repositories for large language models."
authors = [{ name = "RepoContext Authors", email = "team@example.com" }]
license = { file = "LICENSE" }
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["git", "export", "ai", "context"]

[project.scripts]
repocontext = "repocontext.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["repocontext*"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "-ra",
    "--color=yes",
]
