[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
dependencies = [
    "PyYAML>=6.0",
]
name = "repodossier"
version = "1.0.0"
description = "AI-friendly exports of Git repositories for large language models."
readme = "README.md"
authors = [{ name = "RepoDossier Authors", email = "team@example.com" }]
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Software Development :: Build Tools",
]
keywords = ["git", "export", "ai", "context"]

[project.urls]
Homepage = "https://github.com/repodossier/repodossier"
Repository = "https://github.com/repodossier/repodossier"
Issues = "https://github.com/repodossier/repodossier/issues"
Documentation = "https://github.com/repodossier/repodossier#readme"
Changelog = "https://github.com/repodossier/repodossier/releases"

[project.scripts]
repodossier = "repodossier.cli:main"
repocontext = "repodossier.cli:main"
[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "build>=1.2",
    "twine>=5.0",
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
include = ["repodossier*", "repocontext*"]

[tool.pytest.ini_options]
testpaths = [
    "tests",
]
addopts = [
    "-ra",
    "--color=yes",
]
